@@ -145,8 +145,8 @@ socket_timeout = 10
     #
 
 
-#    station  = Your station ID here
-#    password = Your station password here
+#    station  = your Weather Underground station ID here (eg, KORHOODR3)
+#    password = your password here
 
 ############################################################################################
 
